# GeneSurfer

./: .gitignore  CMakeLists.txt  PluginInfo.json  README.md  aql_out.txt  conanfile.py
.github/workflows/: build.yml
cmake/: README_AQL.md
res/: ABCcorr_geneWspatialcoordinates_SCAvg.csv  ABCcorr_geneWspatialcoordinates_ST.csv  chart.qrc  example_chart.qrc  genesurfer_resources.qrc
res/chart/: bar_chart.html  bar_chart.tools.js
res/example_chart/: bar_chart.html  bar_chart.tools.js
res/js_libs/: qwebchannel.tools.js
src/: ChartWidget.cpp  ChartWidget.h  ExampleViewJSPlugin.cpp  ExampleViewJSPlugin.h  GeneSurferPlugin.cpp  GeneSurferPlugin.h  GeneSurferPlugin.json  ScatterView.cpp  ScatterView.h  TableWidget.cpp  TableWidget.h
src/Actions/: ClusteringAction.cpp  ClusteringAction.h  CorrelationModeAction.cpp  CorrelationModeAction.h  DimensionSelectionAction.cpp  DimensionSelectionAction.h  EnrichmentAction.cpp  EnrichmentAction.h  GenePickerAction.cpp  GenePickerAction.h  PointPlotAction.cpp  PointPlotAction.h  PositionAction.cpp  PositionAction.h  SectionAction.cpp  SectionAction.h  SettingsAction.cpp  SettingsAction.h  SingleCellModeAction.cpp  SingleCellModeAction.h
src/Compute/: CorrFilter.cpp  CorrFilter.h  DataMatrix.h  DataStore.h  DataSubset.cpp  DataSubset.h  DataTransformations.cpp  DataTransformations.h  EnrichmentAnalysis.cpp  EnrichmentAnalysis.h  FloodSubset.cpp  FloodSubset.h  HsneHierarchy.cpp  HsneHierarchy.h  fastcluster.cpp
